# Sistema_Trafico_Urbano

./: CMakeLists.txt  README.md  run.bat
app/: AppData.cpp  AppData.h  main.cpp
utils/: CustomMessages.cpp  CustomMessages.h
